--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,3 +3,6 @@ spring:
     mongodb:
       uri: mongodb://app_user:4pp_p4ssw0rd@localhost:27017/bikeworld
       auto-index-creation: true
+authentication:
+  user: test
+  pwd: test01
