--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=supersecret
 MONGO_INITDB_DATABASE=bikeworld
+APP_DB_USERNAME=app_user
+APP_DB_PASSWORD=4pp_p4ssw0rd
