--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -1,47 +1,23 @@
-name: CI/CD Pipeline
+name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - 'feature/**'   # Run tests on any feature branch push
-      - 'develop'      # Trigger deploy on push to develop
+    branches: [ "develop", "feature/**" ]
+  pull_request:
+    branches: [ "develop" ]
 
 jobs:
-  test:
-    if: startsWith(github.ref, 'refs/heads/feature/')
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
-
-      - name: Build and test with Maven
-        run: mvn clean verify
-
-  deploy:
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    runs-on: ubuntu-latest
-    needs: test  # only run if tests job succeeds
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v3
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
+          cache: maven
       - name: Build with Maven
-        run: mvn clean package -DskipTests
-
-      - name: Deploy to Render
-        env:
-          RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
-        run: |
-          curl -X POST $RENDER_DEPLOY_HOOK
+        run: mvn -B clean package --file pom.xml
