--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,16 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>4.3.0</version>
+        <configuration>
+          <repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
+          <jacocoReports>${project.build.directory}/site/jacoco/jacoco.xml</jacocoReports>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
