--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: CI/CD Pipeline
 
 on:
-  push:
-    branches: [ "develop", "feature/**" ]
   pull_request:
+    branches: [ "develop" ]
+  push:
     branches: [ "develop" ]
 
 jobs:
@@ -38,7 +38,6 @@ jobs:
           path-to-lcov: target/site/jacoco/jacoco.xml
           format: jacoco
   deploy:
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: test  # only run if tests job succeeds
 
