--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,13 @@ name: CI/CD Pipeline
 
 on:
   pull_request:
-    branches: [ "develop" ]
-  push:
-    branches: [ "develop" ]
+    types: [opened, synchronize]
+  pull_request_target:
+    types: [closed]
 
 jobs:
   test:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
     steps:
@@ -37,9 +38,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: target/site/jacoco/jacoco.xml
           format: jacoco
+
   deploy:
+    if: github.event_name == 'pull_request_target' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: test  # only run if tests job succeeds
 
     steps:
       - uses: actions/checkout@v4
