feat: Expose health check endpoint

--- a/render.yml
+++ b/render.yml
@@ -6,3 +6,4 @@ services:
     dockerContext: .
     dockerfilePath: src/main/docker/Dockerfile
     plan: free
+    healthCheckPath: /bikeworld/manage/health
