--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>it.swam</groupId>
   <artifactId>backend</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <name>backend</name>
   <description>SWAM backend micro service</description>
 
@@ -36,7 +36,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.4.4</version>
+    <version>3.5.0</version>
     <relativePath/>
   </parent>
 
@@ -45,7 +45,7 @@
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
-        <version>2024.0.0</version>
+        <version>2025.0.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -181,7 +181,7 @@
         <version>0.8.13</version>
         <configuration>
           <excludes>
-            <exclude>**/Application*</exclude>
+            <exclude>**/BackendApplication*</exclude>
             <exclude>**/config/**/*</exclude>
             <exclude>**/dto/**/*</exclude>
             <exclude>**/exception/**/*</exclude>
